# libgyroid

./: .gitignore  CMakeLists.txt  README.md  configure_hooking.sh  requirements.txt
instrumentation/: instrument.py
instrumentation/arch/: aarch64.py  common.py  x86_64.py
libgyroid/: CMakeLists.txt
libgyroid/include/: handler_alarm.h  handler_chown.h  handler_dup.h  handler_execveat.h  handler_f_systemcall.h  handler_fchdir.h  handler_select.h  handler_truncate.h
libgyroid/src/: gyroid.c  handler_select.c
